Fix video width on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -16,13 +16,14 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 0.5rem;
+  width: 100%;
   filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04))
     drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
 }
 
 @media (min-width: 1024px) {
   .video-big {
-    width: 50%;
+    width: 60%;
   }
 }
 
